Width on smaller screens fixed.

--- a/docs/new/styles.less
+++ b/docs/new/styles.less
@@ -34,6 +34,9 @@
     grid-auto-rows: auto;
     gap: 20px;
   }
+  .container {
+    min-width : 1440px;
+  }
 
   .h1 {
     font-family: Inter, serif;
@@ -97,6 +100,7 @@
   }
 
   .menu-container {
+    .container();
     background-color: @color-beige;
     .menu {
       .h3();
@@ -125,6 +129,7 @@
   }
 
   .about-container {
+    .container();
     background-color: @color-beige;
     .about {
       .grid();
@@ -224,6 +229,7 @@
   }
 
   .inquiry-container {
+    .container();
     background-color: @color-white;
     .inquiry {
       .grid();
@@ -270,6 +276,7 @@
   }
 
   .troubles-container {
+    .container();
     background-color: @color-green;
     color: @color-white;
     .troubles {
@@ -306,6 +313,7 @@
   }
 
   .process-container {
+    .container();
     background-color: @color-white;
     color: @color-black;
     padding-top: 80px;
@@ -345,6 +353,7 @@
   }
 
   .solution-container {
+    .container();
     background-color: @color-white;
     color: @color-black;
     padding-bottom: 80px;
@@ -408,6 +417,7 @@
   }
 
   .conditions-container {
+    .container();
     background-color: @color-green;
     color: @color-white;
     .conditions {
@@ -460,6 +470,7 @@
     }
   }
   .footer-container {
+    .container();
     background-color: @color-gray;
     color: @color-white;
     padding-top: 60px;
